# tata_tickets

./: .gitignore  .gitlab-ci.yml  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
dashboard/: .env.example  Dockerfile  README.md  pyproject.toml
dashboard/app/: __init__.py  main.py
dashboard/app/application/: __init__.py  rbac.py  recorder.py  retry.py
dashboard/app/application/deploy/: __init__.py  pipeline.py
dashboard/app/application/knowledge/: __init__.py  builder.py
dashboard/app/application/openspec/: __init__.py  builder.py
dashboard/app/application/orchestration/: __init__.py  classifier.py  executor.py  scheduler.py
dashboard/app/application/services/: __init__.py  agent_bridge.py  base.py  coding_agent.py  deploy.py  (+10 more)
dashboard/app/core/: __init__.py  exceptions.py  logging.py  security.py  settings.py
dashboard/app/domain/: __init__.py  entities.py  enums.py  llm.py  repositories.py
dashboard/app/infrastructure/: __init__.py  auth.py  realtime.py
dashboard/app/presentation/: __init__.py
dashboard/migrations/: 0001_schema.sql  0002_rls.sql  0003_seed.sql  0004_tech_specs.sql  0005_openspec.sql  0006_orchestration.sql  0007_coding_agent.sql  0008_testgen.sql  0009_self_heal.sql  0010_knowledge.sql  0011_agents.sql  0012_deploy.sql
dashboard/tests/: conftest.py  fakes.py  test_agent_bridge.py  test_coding_agent.py  test_crud_service.py  test_deploy.py  test_fleet.py  test_knowledge.py  test_openspec.py  test_orchestrator.py  test_rbac.py  test_security.py  test_self_heal.py  test_tech_spec.py  test_testgen.py
(+116 files in other folders)
